manage to fix the problem on my pause button during Monday Meet Up, the issues was on my class content-container z-index: -1, by removing the z-index it has allow the button to be active. it seem z-index: -1 did not go behind the other elements and instead become a main focus.'

--- a/facwebsite21.css
+++ b/facwebsite21.css
@@ -43,8 +43,10 @@ body {
 /* Content Boarder Design*/
 .content-container {
     position: relative; 
-    z-index: -1; 
+    
     top: 3vh;  
+    min-height: 100vh;
+    margin-bottom: 10vh;
 }
 
 .content-container p{
@@ -91,7 +93,6 @@ h1 {
 /* Bottom Design */
 
 footer{
-    
     border-top: 3px solid darkolivegreen;
     height: 3vh;
     display: flex;
@@ -100,6 +101,7 @@ footer{
     position: absolute;
     bottom: 0;
     width: 100%;
+    
  }
 
 .icons-container{
@@ -107,6 +109,7 @@ footer{
     width: 20%;
     display: flex;
     justify-content: space-between;
+    
 }
 
 footer p{
@@ -143,6 +146,9 @@ footer p{
 }
 
 
+
+
+/* 
 #prev-button{
     position: absolute;
     top: 50%;
@@ -171,4 +177,4 @@ footer p{
     .slides-container{
         width: 100%;
     }
-}
+} */
